[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dochive"
version = "0.1.0"
description = "Mirror HTML documentation into Markdown files with YAML indexes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dochive" }]
dependencies = []

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.8"]

[project.scripts]
dochive = "dochive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
